@@ -121,7 +121,7 @@ import|;
 end_import
 
 begin_comment
-comment|/**   * An indexed {@code double} field.  *<p>  * Finding all documents within an N-dimensional shape or range at search time is  * efficient.  Multiple values for the same field in one document  * is allowed.  *<p>  * This field defines static factory methods for creating common queries:  *<ul>  *<li>{@link #newExactQuery(String, double)} for matching an exact 1D point.  *<li>{@link #newSetQuery(String, double...)} for matching a set of 1D values.  *<li>{@link #newRangeQuery(String, double, double)} for matching a 1D range.  *<li>{@link #newRangeQuery(String, double[], double[])} for matching points/ranges in n-dimensional space.  *</ul>   * @see PointValues  */
+comment|/**   * An indexed {@code double} field for fast range filters.  If you also  * need to store the value, you should add a separate {@link StoredField} instance.  *<p>  * Finding all documents within an N-dimensional shape or range at search time is  * efficient.  Multiple values for the same field in one document  * is allowed.  *<p>  * This field defines static factory methods for creating common queries:  *<ul>  *<li>{@link #newExactQuery(String, double)} for matching an exact 1D point.  *<li>{@link #newSetQuery(String, double...)} for matching a set of 1D values.  *<li>{@link #newRangeQuery(String, double, double)} for matching a 1D range.  *<li>{@link #newRangeQuery(String, double[], double[])} for matching points/ranges in n-dimensional space.  *</ul>   * @see PointValues  */
 end_comment
 
 begin_class
